[package]
name = "ode"
version = "0.1.0"
authors = ["Michael Hardy <98.michael.hardy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy = "0.3"
byteorder = "1.4"
sled = "0.34.6"
lazy_static = "1.4"
thiserror = "1.0"
#serde = "1.0"
#bincode = "1.3.1"
#ron = "0.6"
#uuid = "0.8"