[package]
name = "ode"
version = "0.1.0"
authors = ["Michael Hardy <98.michael.hardy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.6"
lazy_static = "1.4"
thiserror = "1.0"
sha3 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3.1"
ron = "0.6"
bytekey-fix = "0.5"
typetag = "0.1"
crossbeam-channel = "0.5"
num_cpus = "1.13"
rand = { version = "0.5", features = ["i128_support"] }
#uuid = "0.8"